--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #0c0513;
+  background-color: #051306;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -532,7 +532,7 @@ button:focus {
   box-shadow: none !important;
 }
 .project-heading {
-  color: white !important;
+  color: #d6ec0d !important;
   font-size: 2.3em !important;
   font-weight: 500 !important;
   padding-top: 10px !important;
