--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ button:focus {
 /* --------- */
 
 ::-webkit-scrollbar {
-  width: 7px;
+  width: 3px;
 }
 
 /* Track */
@@ -63,12 +63,12 @@ button:focus {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgba(178, 121, 216, 0.959);
-  border-radius: 12px;
+  border-radius: 20px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(222, 130, 235, 0.911);
+  background: whitesmoke;
   border-radius: 12px;
 }
 
@@ -82,11 +82,28 @@ button:focus {
   backdrop-filter: blur(15px) !important;
 }
 
+.sticky1 {
+  background-color: #242e1aa9 !important;
+  transition: all 0.3s ease-out 0s !important;
+  box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
+  backdrop-filter: blur(15px) !important;
+}
+
 .navbar {
   position: fixed !important;
   transition: all 0.3s ease-out 0s !important;
   padding: 0.3rem 2rem !important;
   font-size: 1.2rem !important;
+  background-color: #181a27;
+}
+
+.navbar1 {
+  /* position: fixed !important; */
+  transition: all 0.3s ease-out 0s !important;
+  padding: 0.3rem 2rem !important;
+  font-size: 1.2rem !important;
+  background-color: #051306;
+  margin-top: 4rem;
 }
 
 .navbar-toggler {
@@ -96,10 +113,10 @@ button:focus {
 }
 
 .navbar-toggler span {
-  display: block !important;
+  display:block !important;
   background-color: #14d31e !important;
-  height: 4px !important;
-  width: 27px !important;
+  height: 3px !important;
+  width: 22px !important;
   margin-top: 5px !important;
   margin-bottom: 5px !important;
   transform: rotate(0deg) !important;
@@ -146,6 +163,13 @@ button:focus {
     font-size: 1.4rem !important;
     background-color: #181a27 !important;
   }
+
+  .navbar1 {
+    padding: 1rem 2rem !important;
+    font-size: 1.4rem !important;
+    background-color: #181a27 !important;
+  }
+
   .navbar-nav .nav-item a::after {
     display: none !important;
   }
@@ -160,7 +184,7 @@ button:focus {
 }
 
 .navbar-nav .nav-link {
-  color: rgb(219, 209, 221) !important;
+  color: whitesmoke !important;
   padding-right: 1rem !important;
   padding-left: 1rem !important;
 }
@@ -212,7 +236,7 @@ button:focus {
   animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
   animation-duration: 4.1s; /* Change to speed up or slow down */
   animation-iteration-count: infinite; /* Never stop waving :) */
-  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  transform-origin: 80% 80%; /* Pivot around the bottom-left palm */
   display: inline-block;
 }
 
@@ -271,22 +295,22 @@ button:focus {
 }
 
 .heading {
-  font-size: 2.4em !important;
+  font-size: 3.4em !important;
   padding-left: 50px !important;
 }
 
 .heading-name {
   font-size: 2.5em !important;
-  padding-left: 45px !important;
+  padding-left: 25px !important;
 }
 
 .main-name {
-  color: #d6ec0d;
+  color: #14d31e;
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #d6ec0d !important;
+  color: #14d31e !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
@@ -358,7 +382,7 @@ button:focus {
   text-align: center !important;
   font-size: 1.2em !important;
   line-height: 2em !important;
-  background: #d6ec0d !important;
+  background:whitesmoke !important;
   border-radius: 50% !important;
   transition: 0.5s !important;
 }
@@ -371,7 +395,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #d6ec0d;
+  background: whitesmoke;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -470,7 +494,7 @@ button:focus {
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px #d6ec0d !important;
+  box-shadow: 0 4px 4px 5px whitesmoke !important;
 }
 
 .blog-card {
@@ -523,8 +547,8 @@ button:focus {
 }
 
 .btn-primary:hover {
-  color: #fff !important;
-  background-color: #d6ec0d !important;
+  color: #14d31e !important;
+  background-color: white !important;
   border-color: #d6ec0d !important;
 }
 .btn:focus {
@@ -532,7 +556,7 @@ button:focus {
   box-shadow: none !important;
 }
 .project-heading {
-  color: #d6ec0d !important;
+  color: whitesmoke !important;
   font-size: 2.3em !important;
   font-weight: 500 !important;
   padding-top: 10px !important;
@@ -547,11 +571,11 @@ button:focus {
   padding-top: 150px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
-  color: #d6ec0d !important;
+  color: whitesmoke !important;
 }
 
 .tech-icons {
-  font-size: 4.5em !important;
+  font-size: 5.5em !important;
   margin: 15px !important;
   padding: 10px !important;
   opacity: 0.93 !important;
@@ -562,7 +586,7 @@ button:focus {
   display: table !important;
   box-shadow: 4px 5px 4px 3px rgba(43, 122, 12, 0.137) !important;
   overflow: hidden !important;
-  transition: all 0.4s ease 0s !important;
+  transition: all 0.3s ease 0s !important;
 }
 
 @media (max-width: 767px) {
@@ -572,9 +596,10 @@ button:focus {
 }
 
 .tech-icons:hover {
-  transform: scale(1.05) !important;
+  transform: scale(0.9) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(185, 183, 18, 0.883) !important;
+  border: 2.2px solid whitesmoke !important;
+  color: #14d31e;
 }
 .tech-icon-images {
   padding: 20px !important;
@@ -692,7 +717,7 @@ button:focus {
 }
 
 .like-btn {
-  background-color: #934cce5e !important;
+  background-color: #181a27 !important;
   border-color: #934cce5e !important;
   padding: 0.25rem 0.98rem !important;
   border-radius: 5px !important;
@@ -727,7 +752,7 @@ button:focus {
 
 .fork-btn-inner {
   line-height: 1.4em !important;
-  background-color: #934cce5e !important;
+  background-color: #181a27 !important;
   padding: 0.25rem 1.1rem !important;
   vertical-align: middle !important;
   text-align: center !important;
@@ -735,8 +760,8 @@ button:focus {
 
 .fork-btn-inner:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: whitesmoke !important;
+  border-color: whitesmoke !important;
 }
 .fork-btn-inner::after {
   display: none !important;
