--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #051306;
+  background-color: #3e3232;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -94,7 +94,7 @@ button:focus {
   transition: all 0.3s ease-out 0s !important;
   padding: 0.3rem 2rem !important;
   font-size: 1.2rem !important;
-  background-color: #181a27;
+  background-color: #3E3232;
 }
 
 .navbar1 {
@@ -218,7 +218,7 @@ button:focus {
   height: 5px;
   width: 0;
   border-radius: 16px;
-  background: #14d31e;
+  background: #DCF2F1;
   bottom: 1px;
   left: 0;
   z-index: -1;
@@ -281,7 +281,8 @@ button:focus {
 .home-section {
   position: relative;
   z-index: -1;
-  background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
+  background-color: #503c3c;
+  /* background-image: var(--image-gradient), url(./Assets/home-bg.jpg); */
   background-position: top center;
   background-repeat: no-repeat;
   padding-bottom: 30px !important;
