--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ html {
     rgba(12, 10, 22, 0.863)
   );
 
-  --imp-text-color: #14d31e;
+  --imp-text-color: #A87c7c;
 }
 
 .purple {
@@ -62,7 +62,7 @@ button:focus {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(178, 121, 216, 0.959);
+  background: #DCF2F1;
   border-radius: 20px;
 }
 
@@ -114,7 +114,7 @@ button:focus {
 
 .navbar-toggler span {
   display:block !important;
-  background-color: #14d31e !important;
+  background-color: #DCF2F1 !important;
   height: 3px !important;
   width: 22px !important;
   margin-top: 5px !important;
@@ -306,17 +306,17 @@ button:focus {
 }
 
 .main-name {
-  color: #14d31e;
+  color: #DCF2F1;
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #14d31e !important;
+  color: #A87C7C !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: white !important;
+  color: #DCF2F1 !important;
 }
 
 @media (max-width: 767px) {
@@ -349,7 +349,7 @@ button:focus {
 }
 
 .home-about-description {
-  color: white !important;
+  color: #DCF2F1 !important;
   padding-top: 100px !important;
   padding-bottom: 20px !important;
   text-align: center;
@@ -364,7 +364,7 @@ button:focus {
 .home-about-social {
   text-align: center !important;
   padding-top: 25px;
-  color: white !important;
+  color: #DCF2F1 !important;
 }
 
 .home-about-social-links {
@@ -383,7 +383,7 @@ button:focus {
   text-align: center !important;
   font-size: 1.2em !important;
   line-height: 2em !important;
-  background:whitesmoke !important;
+  background:#DCF2F1 !important;
   border-radius: 50% !important;
   transition: 0.5s !important;
 }
@@ -396,7 +396,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: whitesmoke;
+  background: #DCF2F1;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -404,13 +404,13 @@ button:focus {
 
 .home-social-icons:hover::before {
   transform: scale(1.1);
-  box-shadow: 0 0 15px #801f95;
+  box-shadow: 0 0 15px #503c3c;
 }
 
 .home-social-icons:hover {
-  color: #87209e;
-  box-shadow: 0 0 5px #87209e;
-  text-shadow: 0 0 2px #87209e;
+  color: #7e6363;
+  box-shadow: 0 0 5px #7e6363;
+  text-shadow: 0 0 2px #7e6363;
 }
 
 .social-icons {
@@ -420,14 +420,14 @@ button:focus {
 }
 
 .icon-colour {
-  color: #14d31e !important;
+  color: #3e3232 !important;
 }
 
 /* --------- */
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(10, 4, 22);
+  background-color: #503c3c;
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
